--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" href="/favicon.ico"
+<link rel="shortcut icon" href="/favicon.jpg"
 <meta name="description" content="ALY STUDIO" />
 <title>ALY</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
@@ -316,9 +316,10 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> July 28th, 2020 6:45AM</b></p>
             <br>
-            <p><i>"He can, without anything other than Himself, meet & overflow the deepest demands of our total nature, mysterious & deep as that nature is. God must do everything for us. Out part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict the motions of our expanding hearts. The opposite is true. We can well afford to make God our All, to concentrate, to sacrifice the many for the One."
-
-1 Corinthians 7:24 "So, brothers, in whatever condition each was called, there let him remain with God."</i></p><br>
+            <p><i>"He can, without anything other than Himself, meet & overflow the deepest demands of our total nature, mysterious & deep as that nature is. <br>
+		   God must do everything for us. Out part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict <br>
+		   the motions of our expanding hearts. The opposite is true. We can well afford to make God our All, to concentrate, to sacrifice the many <br>
+		   for the One."</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
