--- a/works.html
+++ b/works.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="shortcut icon" href="/favicon.ico"
+<link rel="shortcut icon" href="/favicon.jpg"
 <meta name="description" content="ALY STUDIO" />
 <title>ALY STUDIO</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
