--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="shortcut icon" href="/favicon.jpg"
 <meta name="description" content="ALY STUDIO" />
 <title>ALY STUDIO</title>
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
 <meta name="color:Font color" content="#222222"/>
