--- a/index.html
+++ b/index.html
@@ -266,19 +266,7 @@
 
 <!-- main -->
 <main id="main" class=" index">
-    <article class="post photo  index" id="113348657626"> 
-        <div class="content">
-            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
-            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
-            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-
-<main id="main" class=" index">
-    <article class="post photo  index" id="113348657626"> 
+    <article class="post photo  index">
         <div class="content">
             <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
             <img src="0350.jpg" alt="L" onContextMenu="return false;"/>  
@@ -288,7 +276,18 @@
         </div>
     </article>
 
-<article class="post photo  index" id="113348505116">
+
+<article class="post photo  index">
+    <div class="content">
+            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
+            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
+            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
     <div class="content">
 	<img src="2681.jpg" alt="Z" onContextMenu="return false;"/>
         <img src="2732.jpg" alt="X" onContextMenu="return false;"/>
@@ -299,7 +298,7 @@
 </article>
 
 <!-- post meta -->
-<article class="post photo  index" id="113348505116">
+<article class="post photo  index">
     <div class="content">
 	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
         <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
