--- a/personal.html
+++ b/personal.html
@@ -317,7 +317,7 @@ footer .left{
             <p style="font-size:110%;"><b> July 28th, 2020 6:45AM</b></p>
             <br>
             <p><i>"He can, without anything other than Himself, meet & overflow the deepest demands of our total nature, mysterious & deep as that nature is. <br>
-		   God must do everything for us. Out part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict <br>
+		   God must do everything for us. Our part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict <br>
 		   the motions of our expanding hearts. The opposite is true. We can well afford to make God our All, to concentrate, to sacrifice the many <br>
 		   for the One."</i></p><br>
             
