--- a/personal.html
+++ b/personal.html
@@ -306,7 +306,9 @@ footer .left{
     <div id="title">
         <a href="/">ALY</a>
     </div>
-    <ul id="pages">       
+    <ul id="pages">
+	        <li><a href="/about.html">About</a></li> 
+                <li><a href="/works.html">Works</a></li>
     </ul>
     <div class="clearFix"></div>
 </header>
