--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
     <div id="title">
         <a href="/">ALY</a>
     </div>
-    <ul id="pages">            
+    <ul id="pages">
+                <li><a href="/about.html">About</a></li> 
+                <li><a href="/works.html">Works</a></li>
+                <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
   
@@ -260,6 +263,71 @@
   gtag('config', 'UA-154490996-1');
 </script> 
 </header>
+
+<!-- main -->
+<main id="main" class=" index">
+    <article class="post photo  index">
+        <div class="content">
+            <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img src="0350.jpg" alt="L" onContextMenu="return false;"/>  
+            <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+
+<article class="post photo  index">
+    <div class="content">
+            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
+            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
+            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
+	<img src="2681.jpg" alt="Z" onContextMenu="return false;"/>
+        <img src="2732.jpg" alt="X" onContextMenu="return false;"/>
+        <img src="2792.jpg" alt="W" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
+        <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
+        <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+        <img src="06.jpg" alt="G" onContextMenu="return false;"/>
+        <img src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
+        <img src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
+	<img src="02.jpg" alt="D" onContextMenu="return false;"/>
+        <img src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
 
 <!-- post meta -->
 </main>
