--- a/personal.html
+++ b/personal.html
@@ -316,12 +316,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> July 28th, 2020 6:45AM</b></p>
+            <p style="font-size:110%;"><b> August 18th, 2020 5:23PM</b></p>
             <br>
-            <p><i>"He can, without anything other than Himself, meet & overflow the deepest demands of our total nature, mysterious & deep as that nature is. <br>
-		   God must do everything for us. Our part is to yield & trust. We need not fear that in seeking God only we may narrow our lives or restrict <br>
-		   the motions of our expanding hearts. The opposite is true. We can well afford to make God our All, to concentrate, to sacrifice the many <br>
-		   for the One."</i></p><br>
+            <p><i>real thing</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
