--- a/index.html
+++ b/index.html
@@ -264,9 +264,18 @@
 
 <!-- main -->
 <main id="main" class=" index">
-    <article class="post photo  index">
+    <article class="post photo  index" id=""> 
         <div class="content">
-
+            <p style="font-size:110%;"><b> We're updating www.aly.studio!</b></p>
+            <br>
+            <p></p>
+            <br>
+            <br>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+</main>
 <!-- post meta -->
 </main>
 <!-- footer -->
