--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#222222"/>
+<meta name="color:Font color" content="#FFFFFF"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <meta name="if:Show social icons" content="1"/>
