--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
         body{
             background-color:#000000;
-            color:#222222;
+            color:#FFFFFF;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
