--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#FFFFFF"/>
+<meta name="color:Font color" content="#222222"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <meta name="if:Show social icons" content="1"/>
@@ -32,7 +32,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#FFFFFF;
+            color:#222222;
             text-decoration:none;
         }
         a:hover{
@@ -43,8 +43,8 @@
             clear:both;
         }
         body{
-            background-color:#000000;
-            color:#FFFFFF;
+            background-color:#ffffff;
+            color:#222222;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
@@ -248,7 +248,9 @@
         <a href="/">ALY</a>
     </div>
     <ul id="pages">
-    
+                <li><a href="/about.html">About</a></li> 
+                <li><a href="/works.html">Works</a></li>
+                <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
   
@@ -264,19 +266,87 @@
 
 <!-- main -->
 <main id="main" class=" index">
-    <article class="post photo  index" id=""> 
+    <article class="post photo  index">
         <div class="content">
-            <p style="font-size:110%;"><b> We're updating www.aly.studio!</b></p>
-            <br>
-            <p></p>
-            <br>
-            <br>
+            <img src="5883.jpg" alt="H1" onContextMenu="return false;"/>
+            <img src="5547.jpg" alt="1H" onContextMenu="return false;"/>  
+            <img src="5278.jpg" alt="0H" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
-</main>
+
+<article class="post photo  index">
+    <div class="content">
+            <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img src="0350.jpg" alt="L" onContextMenu="return false;"/>  
+            <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+
+<article class="post photo  index">
+    <div class="content">
+            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
+            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
+            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
+	<img src="2681.jpg" alt="Z" onContextMenu="return false;"/>
+        <img src="2732.jpg" alt="X" onContextMenu="return false;"/>
+        <img src="2792.jpg" alt="W" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
+        <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
+        <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+        <img src="06.jpg" alt="G" onContextMenu="return false;"/>
+        <img src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
+        <img src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
+	<img src="02.jpg" alt="D" onContextMenu="return false;"/>
+        <img src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+
 <!-- post meta -->
 </main>
+<!-- footer -->
+<footer class="index">
+    <div class="left">
+    <div id="copyright">ALY STUDIO 2020</div>
+    </div>
+    <div class="clearFix"></div>
+</footer>
 </body>
 </html>
