--- a/about.html
+++ b/about.html
@@ -326,7 +326,7 @@ footer .left{
             <li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li>
             <li>He enjoys walking around the lakes, cruising on his penny board, reading in a hammock, and creating in After Effects.</li>
             <li>His most traumatic experience includes - you'll have to buy him dinner first.</li>
-            </ul>Go watch his recent short film: <a>https://youtu.be/i_7sF1LxDbI</a></p>
+            </ul>Go watch his recent <a href="https://youtu.be/i_7sF1LxDbI">short film.</a></p>
             <br>
             <br>
         </div>
