--- a/about.html
+++ b/about.html
@@ -301,6 +301,9 @@ footer .left{
         ol.notes li.note blockquote a{
             color:#222222;
         }
+a:link {
+  color: red;
+    
 </style>
 
 <body> 
