--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img src="A7.jpg" alt="A" onContextMenu="return false;"/>
             <img src="A6.jpg" alt="L" onContextMenu="return false;"/>  
             <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
         </div>
