--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <meta name="text:Twitter ID" content=""/>
 <meta name="text:Instagram ID" content=""/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<script src="//static.tumblr.com/s4jebcl/7Ienjuwzs/jquery-1.11.2.min.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
@@ -43,7 +42,7 @@
             clear:both;
         }
         body{
-            background-color:#ffffff;
+            background-color:#000000;
             color:#222222;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
@@ -263,81 +262,6 @@
   gtag('config', 'UA-154490996-1');
 </script> 
 </header>
-
-<!-- main -->
-<main id="main" class=" index">
-    <article class="post photo  index">
-        <div class="content">
-            <img src="GN4A9277-2.jpg" alt="H1" onContextMenu="return false;"/>
-            <img src="GN4A9170-1.jpg" alt="1H" onContextMenu="return false;"/>  
-            <img src="5278.jpg" alt="0H" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-            <img src="A7.jpg" alt="A" onContextMenu="return false;"/>
-            <img src="A6.jpg" alt="L" onContextMenu="return false;"/>  
-            <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-
-<article class="post photo  index">
-    <div class="content">
-            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
-            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
-            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-	<img src="2681.jpg" alt="Z" onContextMenu="return false;"/>
-        <img src="2732.jpg" alt="X" onContextMenu="return false;"/>
-        <img src="2792.jpg" alt="W" onContextMenu="return false;"/>    
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
-        <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
-        <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-        <img src="06.jpg" alt="G" onContextMenu="return false;"/>
-        <img src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
-        <img src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
-	<img src="02.jpg" alt="D" onContextMenu="return false;"/>
-        <img src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
 
 <!-- post meta -->
 </main>
