--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#222222"/>
+<meta name="color:Font color" content="#ffffff"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <meta name="if:Show social icons" content="1"/>
@@ -31,7 +31,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#222222;
+            color:#ffffff;
             text-decoration:none;
         }
         a:hover{
@@ -43,7 +43,7 @@
         }
         body{
             background-color:#000000;
-            color:#222222;
+            color:#ffffff;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
@@ -247,9 +247,7 @@
         <a href="/">ALY</a>
     </div>
     <ul id="pages">
-                <li><a href="/about.html">About</a></li> 
-                <li><a href="/works.html">Works</a></li>
-                <li><a href="/personal.html">Personal</a></li>            
+                <li>Be back soon</a></li>          
     </ul>
     <div class="clearFix"></div>
   
