--- a/personal.html
+++ b/personal.html
@@ -316,9 +316,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> August 18th, 2020 5:23PM</b></p>
+            <p style="font-size:110%;"><b> November 29th, 2020 5:23PM</b></p>
             <br>
-            <p><i>real thing</i></p><br>
+            <p><i>medium rare</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
