--- a/about.html
+++ b/about.html
@@ -121,6 +121,12 @@ footer .left{
     opacity:0.4;
 }
 
+a:link {
+  color: red
+  background-color: transparent;
+  text-decoration: none;
+
+}
 
 /***********posts***********/
         article.index{
