--- a/works.html
+++ b/works.html
@@ -308,7 +308,7 @@ footer .left{
     </div>
     <ul id="pages">
 	        <li><a href="/about.html">About</a></li> 
-                <li><a href="/works.html">Works</a></li>
+                <li><a href="/personal.html">Personal</a></li>
     </ul>
     <div class="clearFix"></div>
 </header>
