--- a/index.html
+++ b/index.html
@@ -261,7 +261,14 @@
 </header>
 
 <!-- post meta -->
+<main id="main" class=" index">
+  <article class="post photo  index">
+      <div class="content">
+        <img src="79.jpg" alt="Weddings" onContextMenu="return false;"/>
+      </div>
+      <div class="content" style="display:none;">
 </main>
+   
 <!-- footer -->
 <footer class="index">
     <div class="left">
