--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <main id="main" class=" index">
   <article class="post photo  index">
       <div class="content">
-        <img src="79.jpg" alt="Weddings" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="79.jpg" alt="Weddings" onContextMenu="return false;" ondragstart="return false;"/>
       </div>
       <div class="content" style="display:none;">
 </main>
