--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img src="9277.jpg" alt="H1" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
             <img src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
             <img src="5278.jpg" alt="0H" onContextMenu="return false;"/>
         </div>
