--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
     <article class="post photo  index">
         <div class="content">
             <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
-            <img src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
-            <img src="5278.jpg" alt="0H" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="5278.jpg" alt="0H" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -274,9 +274,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img src="0279.jpg" alt="A" onContextMenu="return false;"/>
-            <img src="9170.jpg" alt="L" onContextMenu="return false;"/>  
-            <img src="0007.jpg" alt="Y" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="9170.jpg" alt="L" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="0007.jpg" alt="Y" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -285,9 +285,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img src="3116.jpg" alt="P" onContextMenu="return false;"/>
-            <img src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
-            <img src="3338.jpg" alt="R" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="3116.jpg" alt="P" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="3338.jpg" alt="R" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -295,9 +295,9 @@
 
 <article class="post photo  index">
     <div class="content">
-	<img src="2681.jpg" alt="Z" onContextMenu="return false;"/>
-        <img src="2732.jpg" alt="X" onContextMenu="return false;"/>
-        <img src="2792.jpg" alt="W" onContextMenu="return false;"/>    
+	<img draggable="false" ondragstart="return false;" src="2681.jpg" alt="Z" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2732.jpg" alt="X" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2792.jpg" alt="W" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
     </div>
@@ -306,9 +306,9 @@
 <!-- post meta -->
 <article class="post photo  index">
     <div class="content">
-	<img src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
-        <img src="9239.jpg" alt="B" onContextMenu="return false;"/>
-        <img src="05.jpg" alt="C" onContextMenu="return false;"/>    
+	<img draggable="false" ondragstart="return false;" src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="9239.jpg" alt="B" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="05.jpg" alt="C" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
     </div>
@@ -316,9 +316,9 @@
 <!-- post meta -->
 <article class="post photo  index">
     <div class="content">
-        <img src="06.jpg" alt="G" onContextMenu="return false;"/>
-        <img src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
-        <img src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="06.jpg" alt="G" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
@@ -326,9 +326,9 @@
 
 <article class="post photo  index">
     <div class="content">
-        <img src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
-	<img src="02.jpg" alt="D" onContextMenu="return false;"/>
-        <img src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
+	<img draggable="false" ondragstart="return false;" src="02.jpg" alt="D" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
