--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="AA" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
 
 <article class="post photo  index">
     <div class="content">
