--- a/index.html
+++ b/index.html
@@ -264,6 +264,14 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
+            <img draggable="false" ondragstart="return false;" src="96.jpg" alt="STUDIO PHOTOS" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
             <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
             <img draggable="false" ondragstart="return false;" src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
             <img draggable="false" ondragstart="return false;" src="5278.jpg" alt="0H" onContextMenu="return false;"/>
