--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
     <article class="post photo  index">
         <div class="content">
             <img draggable="false" ondragstart="return false;" src="96.jpg" alt="STUDIO PHOTOS" onContextMenu="return false;"/>
+ 	    <img draggable="false" ondragstart="return false;" src="71.jpg" alt="STUDIO PHOTOGRAPHS" onContextMenu="return false;"/>
+
         </div>
         <div class="content" style="display:none;">     
         </div>
