--- a/personal.html
+++ b/personal.html
@@ -316,9 +316,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> December 19th, 2020 12:14PM</b></p>
+            <p style="font-size:110%;"><b>January 10th, 2021 1417</b></p>
             <br>
-            <p><i>rare candy</i></p><br>
+            <p><i>Proverbs 13:12 Hope deferred makes the heart sick, but a longing fulfilled is a tree of life.</i></p><br>
             
         </div>
         <div class="content" style="display:none;">     
