--- a/personal.html
+++ b/personal.html
@@ -318,8 +318,8 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b>January 10th, 2021 1417</b></p>
             <br>
-            <p><i>Proverbs 13:12 Hope deferred makes the heart sick, but a longing fulfilled is a tree of life.</i></p><br>
-            
+            <p><i>Proverbs 13:12 Hope deferred makes the heart sick, but a longing fulfilled is a tree of life.</i></p>
+	    <br>real hope will make you a tree of life.            
         </div>
         <div class="content" style="display:none;">     
         </div>
