--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             clear:both;
         }
         body{
-            background-color:#ffffff;
+            background-color:#000000;
             color:#222222;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
@@ -243,10 +243,6 @@
     <div id="title">
         <a href="/">ALY</a>
     </div>
-    <ul id="pages">
-                <li><a href="/about.html">About</a></li> 
-                <li><a href="/works.html">Works</a></li>
-                <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
   
@@ -259,101 +255,6 @@
   gtag('config', 'UA-154490996-1');
 </script> 
 </header>
-
-<!-- main -->
-<main id="main" class=" index">
-    <article class="post photo  index">
-        <div class="content">
-            <img draggable="false" ondragstart="return false;" src="96.jpg" alt="STUDIO PHOTOS" onContextMenu="return false;"/>
- 	    <img draggable="false" ondragstart="return false;" src="71.jpg" alt="STUDIO PHOTOGRAPHS" onContextMenu="return false;"/>
-
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="5278.jpg" alt="0H" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="AA" onContextMenu="return false;"/>
-	    <img draggable="false" ondragstart="return false;" src="65.jpg" alt="AC" onContextMenu="return false;"/>
-	    <img draggable="false" ondragstart="return false;" src="80.jpg" alt="AD" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="0279.jpg" alt="A" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="9170.jpg" alt="L" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="0007.jpg" alt="Y" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="3116.jpg" alt="P" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="3338.jpg" alt="R" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-	<img draggable="false" ondragstart="return false;" src="2681.jpg" alt="Z" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="2732.jpg" alt="X" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="2792.jpg" alt="W" onContextMenu="return false;"/>    
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-	<img draggable="false" ondragstart="return false;" src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="9239.jpg" alt="B" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="05.jpg" alt="C" onContextMenu="return false;"/>    
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-<!-- post meta -->
-<article class="post photo  index">
-    <div class="content">
-        <img draggable="false" ondragstart="return false;" src="06.jpg" alt="G" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
-<article class="post photo  index">
-    <div class="content">
-        <img draggable="false" ondragstart="return false;" src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
-	<img draggable="false" ondragstart="return false;" src="02.jpg" alt="D" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">
-    </div>
-</article>
-
 
 <!-- post meta -->
 </main>
