--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#222222;
+            color:#ffffff;
             text-decoration:none;
         }
         a:hover{
@@ -40,7 +40,7 @@
         }
         body{
             background-color:#000000;
-            color:#222222;
+            color:#ffffff;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
