--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         a:hover{
             text-decoration:none;
-            color:#529ECC;
+            color:#ff0000;
         }
         .clearFix{
             clear:both;
