--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#ffffff"/>
+<meta name="color:Font color" content="#222222"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
-<meta name="if:Show social icons" content="1"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
