--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#ffffff;
+            color:#222222;
             text-decoration:none;
         }
         a:hover{
