--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#222222"/>
+<meta name="color:Font color" content="#D3D3D3"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -27,7 +27,7 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#222222;
+            color:#D3D3D3;
             text-decoration:none;
         }
         a:hover{
