--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         a:hover{
             text-decoration:none;
-            color:#ff0000;
+            color:#A9A9A9;
         }
         .clearFix{
             clear:both;
