--- a/index.html
+++ b/index.html
@@ -255,8 +255,16 @@
 </script> 
 </header>
 
-<!-- post meta -->
-</main>
+<!-- main -->
+<main id="main" class=" index">
+    <article class="post photo  index">
+        <div class="content">
+            <img draggable="false" ondragstart="return false;" src="1549" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
 <!-- footer -->
 <footer class="index">
     <div class="left">
