--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img draggable="false" ondragstart="return false;" src="1549" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="1549.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
