--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
     <article class="post photo  index">
         <div class="content">
             <img draggable="false" ondragstart="return false;" src="1549.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="80.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
