--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img draggable="false" ondragstart="return false;" src="1549.jpg" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="80.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="1549.jpg" alt="A" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="B" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="80.jpg" alt="C" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
